# kavachos

./: .gitignore  .posthog-events.json  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LAUNCH-CHECKLIST.md  LAUNCH.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json  launch-0-1-0.md  launch-adapters-and-plugins-1-0-0.md
.github/: FUNDING.yml  labels.yml  profile-README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-python.yml  release.yml
docs/: OSS-GOVERNANCE-PR-BODY.md  discussions-playbook.md  instrumentation-client.ts  maintainer-triage-playbook.md  next.config.mjs  oss-community-pr-summary.md  package.json  triage-label-taxonomy.md  tsconfig.json
docs/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
docs/archived-marketing/: README.md  landing-page.tsx
docs/components/: auth-flow.tsx  button.tsx  code-block.tsx  code-preview.tsx  feature-card.tsx  feature-grid.tsx  flow-diagram.tsx  footer.tsx  hero-panel.tsx  how-it-works.tsx  icons.tsx  interactive-grid.tsx  (+5 more)
scripts/: oss-smoke.mjs
sdks/python/: README.md  pyproject.toml
sdks/python/kavachos/: __init__.py  _http.py  agents.py  audit.py  auth.py  client.py  delegation.py  errors.py  permissions.py  types.py
sdks/python/tests/: conftest.py  test_agents.py  test_audit_delegation.py  test_auth.py  test_client.py
(+271 files in other folders)
