[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kavachos"
version = "0.1.0"
description = "Python SDK for KavachOS — auth OS for AI agents and humans"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["auth", "agents", "ai", "mcp", "identity", "permissions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://kavachos.com"
Repository = "https://github.com/kavachos/kavachos"
Documentation = "https://kavachos.com/docs"
Issues = "https://github.com/kavachos/kavachos/issues"

[tool.hatch.build.targets.wheel]
packages = ["kavachos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.9"
